data/derived/comb/progs/unify/prog5925.ml.out
Characters 73-80:
  if n/10 != 0 then 1+additivePersistence sumList (digitsOfInt n)
                                          ^^^^^^^
Error: This expression has type int list -> int
       but an expression was expected of type int
